--- a/Template/Home/siteMap.html
+++ b/Template/Home/siteMap.html
@@ -140,11 +140,41 @@
 
                  <li><a href="{% url 'AutomationExpo' %}">AI & Process Automation</a>
                     <ul>
-                        <li><a href="{% url 'AutomationExpo' %}#plm_products">Product Lifecycle Management & Project Planning & Control</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#plm_products">Product Lifecycle Management (PLM) & Project Planning & Control(PPC)</a></li>
+                        <ol>
+                            <li><a href="{% url 'AutomationExpo' %}#bom_product">Bill Of Materils (BOM)</a></li>
+                            <li><a href="{% url 'AutomationExpo' %}#material_planning">Material Planning</a></li>
+                            <li><a href="{% url 'AutomationExpo' %}#machine_planning">Machine Planning</a></li>
+                            <li><a href="{% url 'AutomationExpo' %}#manpower_planning">Manpower Planning</a></li>
+                            <li><a href="{% url 'AutomationExpo' %}#ai_forecasting">Forecasting AI</a></li>
+                            <li><a href="{% url 'AutomationExpo' %}#dashboards">Actionable Dashboards</a></li>
+                        </ol>
                         <li><a href="{% url 'AutomationExpo' %}#process_automation">Process Automation Suite</a></li>
+                        <ol>
+                        <li><a href="{% url 'AutomationExpo' %}#bpa_product">Business Process Automation (BPA)</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#rpa_product">Robotic Process Automation (RPA)</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#metadata_extraction">Dynamic Metadata Extraction</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#dms_product">Document Management System (DMS)</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#chatbot_ai">AI Chatbots & Helpdesk</a></li>
+                        </ol>
                         <li><a href="{% url 'AutomationExpo' %}#hr_event">HR & Workforce Management</a></li>
+                        <ol>
+                        <li><a href="{% url 'AutomationExpo' %}#onsite_team">HRMS & Onsite Team Management</a></li>
+                        </ol>
                         <li><a href="{% url 'AutomationExpo' %}#other_event">Enterprise-Grade Applications (Office Automation)</a></li>
+                        <ol>
+                        <li><a href="{% url 'AutomationExpo' %}#lms_product">Learning Management System (LMS)</a></li>  
+                        <li><a href="{% url 'AutomationExpo' %}#webcrate">Website Builder & E-Commerce Platforms</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#dynamic_reports">Advanced Analytics & Dynamic Data-Driven Reports</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#library_management">Library Management System</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#crm_product">Customer Relationship Management (CRM)</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#audit_compliance">Audit & Compliance Automation</a></li>
+                        <li><a href="{% url 'AutomationExpo' %}#utility_solutions">Utility Solutions</a></li>
+                        </ol>
                         <li><a href="{% url 'AutomationExpo' %}#government_projects">Government Projects</a></li>
+                        <ol>
+                        <li><a href="{% url 'AutomationExpo' %}#gov_projects">Our Projects</a></li>
+                        </ol>
                         <li><a href="{% url 'AutomationExpo' %}#strengths">Our Core Strengths</a></li>
                         <li><a href="{% url 'AutomationExpo' %}#why_choose">Why Choose Us?</a></li>
                          <li><a href="{% url 'AutomationExpo' %}#event_gallery">Event Gallery</a></li>
