Palavee layout changes

--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -448,6 +448,8 @@
                     <li style="margin-top:2%"><a href="{% url 'Software' %}">Software</a></li>
                     <li style="margin-top:2%"><a href="{% url 'Services' %}">Services</a></li>
                     <li style="margin-top:2%"><a href="{% url 'Product' %}">Product</a></li>
+                    <li style="margin-top:2%"><a href="{% url 'Product' %}">Blogs</a></li>
+                    <li style="margin-top:2%"><a href="{% url 'Product' %}">AI & Process Automation</a></li>
                     <li style="margin-top:2%"><a href="{% url 'siteMap' %}">Site Map</a></li>
                 </ul>
             </div>
