--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -237,9 +237,9 @@
                   </div>
                   
                 <div class="col-md-3 text-center">
-                    <a href="mailto:technowinitinfra@gmail.com" target="_blank">
+                    <a href="mailto:support@technowin.co.in" target="_blank">
                         <img src="{% static 'social_media/gmail.png' %}" alt="Email">
-                        technowinitinfra@gmail.com
+                        support@technowin.co.in
                     </a>
                 </div>
                 <div class="col-md-2 text-center">
